[package]
name = "information-theory"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Information theory in Rust — Shannon entropy, KL divergence, mutual information, channel capacity, source coding"
repository = "https://github.com/SuperInstance/information-theory"

[dependencies]
serde = { version = "1", features = ["derive"] }
nalgebra = { version = "0.33", features = ["serde-serialize"] }

[dev-dependencies]
approx = "0.5"
